--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -23,6 +23,7 @@
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <option value="init">Choose ID No.</option>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
