--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -22,8 +22,9 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
-          <option value="init">Choose ID No.</option>
+          <select id="selDataset" onchange="optionChanged(this.value)">
+            <option value="init">Choose ID No.</option>
+          </select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -33,7 +34,8 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="bar">
+        </div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
@@ -48,8 +50,9 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
+  <!-- <script src="./static/js/app.js"></script> -->
+  <script src="./static/js/app2.js"></script>
+  <!-- <script src="./static/js/bonus.js"></script> -->
 
 </body>
 
