--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -22,7 +22,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)">
+          <select id="selDataset">
             <option value="init">Choose ID No.</option>
           </select>
         </div>
