--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -30,7 +30,9 @@
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body">
+
+          </div>
         </div>
       </div>
       <div class="col-md-5">
