--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div id="sample-metadata" class="panel-body">
             <ul>
-              
+
             </ul>
           </div>
         </div>
@@ -55,7 +55,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- <script src="./static/js/app.js"></script> -->
-  <script src="./static/js/app2.js"></script>
+  <script src="./StarterCode/static/js/app2.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
 
 </body>
